Update to Java 21.0.0.35